tests/error/errors_on_usage/for_target_type_change.py
from tests.util import compile_guppy


@compile_guppy
def foo(xs: list[bool]) -> int:
    x = 5
    for x in xs:
        pass
    return x
