tests/error/errors_on_usage/for_target_type_change.err
Error: Different types (at $FILE:9:11)
  | 
7 |     for x in xs:
8 |         pass
9 |     return x
  |            ^ Variable `x` may refer to different types
  | 
6 |     x = 5
  |     - This is of type `int`
  | 
7 |     for x in xs:
  |         - This is of type `bool`

Guppy compilation failed due to 1 previous error
